@@ -1,3 +1,7 @@
+2006-12-01  Kurt A. Stephens  <kurt@umleta.com>
+
+	* Fixed ambigous method testing.
+	
 2006-11-29  Kurt A. Stephens  <kurt@umleta.com>
 
 	* Major cleanup and documentation
